Removed `index-original.html` file.

--- a/engineering-laws-terminal.html
+++ b/engineering-laws-terminal.html
@@ -4,12 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Engineering Laws - Terminal Mode</title>
+        <!-- Common CSS -->
+    <link rel="stylesheet" href="assets/css/common.css">
+
     <style>
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-        }
 
         body {
             font-family: 'Courier New', 'Consolas', 'Monaco', monospace;
@@ -431,5 +429,7 @@ engineering, ensuring quality, security, and human expertise remain paramount.</
         // Regenerate pattern on resize
         window.addEventListener('resize', generateBackgroundPattern);
     </script>
+    <!-- Common JavaScript -->
+    <script src="assets/js/common.js"></script>
 </body>
 </html>
