--- a/engineering-laws.html
+++ b/engineering-laws.html
@@ -4,12 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Engineering Laws - AI Development Best Practices</title>
+        <!-- Common CSS -->
+    <link rel="stylesheet" href="assets/css/common.css">
+
     <style>
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-        }
 
         body {
             font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif;
@@ -396,32 +394,18 @@
             margin: 40px 0;
         }
 
-        @keyframes fadeInDown {
-            from {
-                opacity: 0;
-                transform: translateY(-30px);
-            }
             to {
                 opacity: 1;
                 transform: translateY(0);
             }
         }
 
-        @keyframes fadeInUp {
-            from {
-                opacity: 0;
-                transform: translateY(30px);
-            }
             to {
                 opacity: 1;
                 transform: translateY(0);
             }
         }
 
-        @keyframes fadeIn {
-            from {
-                opacity: 0;
-            }
             to {
                 opacity: 1;
             }
@@ -530,5 +514,7 @@
         // Load laws when page loads
         document.addEventListener('DOMContentLoaded', loadEngineeringLaws);
     </script>
+    <!-- Common JavaScript -->
+    <script src="assets/js/common.js"></script>
 </body>
 </html>
